[gd_scene load_steps=12 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Assets/analog-stick/analog.tscn" type="PackedScene" id=2]
[ext_resource path="res://MAPA_PRINCIPAL/Player.gd" type="Script" id=3]
[ext_resource path="res://MAPA_PRINCIPAL/tileset_ground.tres" type="TileSet" id=4]
[ext_resource path="res://MAPA_PRINCIPAL/Camera2D.gd" type="Script" id=5]
[ext_resource path="res://MAPA_PRINCIPAL/Panel.gd" type="Script" id=6]
[ext_resource path="res://MAPA_PRINCIPAL/DialogManager.gd" type="Script" id=7]
[ext_resource path="res://MAPA_PRINCIPAL/interact.gd" type="Script" id=8]
[ext_resource path="res://MAPA_PRINCIPAL/player_sprites/ANIM_CHARA.tres" type="SpriteFrames" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="CircleShape2D" id=2]
radius = 55.0364

[node name="mapa" type="Node"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Analog" parent="CanvasLayer" instance=ExtResource( 2 )]
position = Vector2( 240, 744 )
z_index = 1337

[node name="INTERACTION_PANEL" type="Panel" parent="CanvasLayer"]
margin_left = 96.0
margin_top = 297.0
margin_right = 384.0
margin_bottom = 441.0
script = ExtResource( 6 )

[node name="Button" type="Button" parent="CanvasLayer/INTERACTION_PANEL"]
margin_left = 69.0
margin_top = 51.0
margin_right = 204.0
margin_bottom = 96.0
text = "Falar com mãe"

[node name="DialogManager" type="Control" parent="CanvasLayer"]
script = ExtResource( 7 )

[node name="BAR_TOP" type="Panel" parent="CanvasLayer/DialogManager"]
margin_right = 481.0
margin_bottom = 145.0

[node name="BAR_DOWN" type="Panel" parent="CanvasLayer/DialogManager"]
margin_top = 711.0
margin_right = 481.0
margin_bottom = 856.0

[node name="NomePersonagem" type="RichTextLabel" parent="CanvasLayer/DialogManager/BAR_DOWN"]
margin_left = 15.0
margin_top = 11.0
margin_right = 474.0
margin_bottom = 24.0
text = "Haro!"

[node name="DialogText" type="RichTextLabel" parent="CanvasLayer/DialogManager/BAR_DOWN"]
margin_left = 15.0
margin_top = 33.0
margin_right = 471.0
margin_bottom = 111.0
text = "Haro!"

[node name="PROX_FALA" type="Button" parent="CanvasLayer/DialogManager/BAR_DOWN"]
margin_left = 396.0
margin_top = 117.0
margin_right = 471.0
margin_bottom = 138.0
text = "Próx"

[node name="SPRITE_PERSONAGEM" type="Sprite" parent="CanvasLayer/DialogManager/BAR_DOWN"]
position = Vector2( 91, -62 )
scale = Vector2( 0.1, 0.1 )
z_index = -1
texture = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 240, 428 )
current = true
script = ExtResource( 5 )
_playerPath = NodePath("../Player")
camOffset = Vector2( 0, -110 )

[node name="Player" type="AnimatedSprite" parent="."]
position = Vector2( 222, 549 )
scale = Vector2( 1.5, 1.5 )
z_index = 5
frames = ExtResource( 9 )
animation = "IDLE"
playing = true
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}
pSpeed = 10
_analogPath = NodePath("../CanvasLayer/Analog")

[node name="Area2D" type="Area2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Area2D"]
shape = SubResource( 1 )

[node name="npc" type="Sprite" parent="."]
modulate = Color( 0.168627, 0.705882, 0.0745098, 1 )
position = Vector2( 192, 288 )
z_index = 4
texture = ExtResource( 1 )
script = ExtResource( 8 )

[node name="Area2D" type="Area2D" parent="npc"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="npc/Area2D"]
position = Vector2( -1, 0 )
shape = SubResource( 2 )

[node name="FASE_ANIMAIS" type="Sprite" parent="."]
modulate = Color( 0.168627, 0.705882, 0.0745098, 1 )
position = Vector2( -195, 396 )
z_index = 4
texture = ExtResource( 1 )
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}
interacao = 1
extra = "Animais"

[node name="Area2D" type="Area2D" parent="FASE_ANIMAIS"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FASE_ANIMAIS/Area2D"]
position = Vector2( -1, 0 )
shape = SubResource( 2 )

[node name="ground" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
cell_size = Vector2( 48, 48 )
format = 1
tile_data = PoolIntArray( 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327695, 9, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393231, 7, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 1, 0, 458768, 1, 0, 458769, 1, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 1, 0, 524305, 1, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 1, 0, 589841, 1, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0 )

[connection signal="InvertAnalogState" from="CanvasLayer/INTERACTION_PANEL" to="CanvasLayer/Analog" method="_on_INTERACTION_PANEL_InvertAnalogState"]
[connection signal="InvertDialogState" from="CanvasLayer/INTERACTION_PANEL" to="CanvasLayer/DialogManager" method="_on_INTERACTION_PANEL_InvertDialogState"]
[connection signal="pressed" from="CanvasLayer/INTERACTION_PANEL/Button" to="CanvasLayer/INTERACTION_PANEL" method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/DialogManager/BAR_DOWN/PROX_FALA" to="CanvasLayer/DialogManager" method="_on_PROX_FALA_pressed"]
[connection signal="sinal_interacao_off" from="npc" to="CanvasLayer/INTERACTION_PANEL" method="_on_npc_sinal_interacao_off"]
[connection signal="sinal_interacao_on" from="npc" to="CanvasLayer/INTERACTION_PANEL" method="_on_npc_sinal_interacao_on"]
[connection signal="area_shape_entered" from="npc/Area2D" to="npc" method="_on_Area2D_area_shape_entered"]
[connection signal="area_shape_exited" from="npc/Area2D" to="npc" method="_on_Area2D_area_shape_exited"]
[connection signal="sinal_interacao_off" from="FASE_ANIMAIS" to="CanvasLayer/INTERACTION_PANEL" method="_on_npc_sinal_interacao_off"]
[connection signal="sinal_interacao_on" from="FASE_ANIMAIS" to="CanvasLayer/INTERACTION_PANEL" method="_on_npc_sinal_interacao_on"]
[connection signal="area_shape_entered" from="FASE_ANIMAIS/Area2D" to="FASE_ANIMAIS" method="_on_Area2D_area_shape_entered"]
[connection signal="area_shape_exited" from="FASE_ANIMAIS/Area2D" to="FASE_ANIMAIS" method="_on_Area2D_area_shape_exited"]
